fixing button redering issue on ios devives

--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -59,7 +59,10 @@ h1 {
     margin: 20px auto;
     color: red;
     cursor: pointer;
+    /* Fixing rendering issue with ios devices */
     -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 .btn:hover {
